# timer

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
configuration/fit/: index.html
configuration/sys/: index.html
docs/: examples.md  index.md  installation.md  usage.md
docs/configuration/: fit.md
examples/: index.html
examples/241126-muscat3/: IRAS04125_241126_muscat3_g_c345_r18.csv  IRAS04125_241126_muscat3_i_c23456_r18.csv  IRAS04125_241126_muscat3_r_c26_r18.csv  IRAS04125_241126_muscat3_z_c23456_r22.csv  fit.yaml  sys.yaml
examples/hip67522b/: sys.yaml
examples/hip67522c/: fit.yaml
examples/toi2123/: TESS20200521.csv  TESS20200521.txt  fit.yaml  sys.yaml
examples/v1298tau/: V1298Taub_230730_muscat3_g_c123678_r20_mapping.txt  V1298Taub_230730_muscat3_i_c35678_r20_mapping.txt  fit.yaml
examples/v1298tau-m2/: V1298Tau-c_231202_muscat2_g_t3_c2_r26_mapping.txt  V1298Tau-c_231202_muscat2_i_t3_c1257_r20_mapping.txt  V1298Tau-c_231202_muscat2_r_t3_c125_r22_mapping.txt  V1298Tau-c_231202_muscat2_z_t3_c12_r22_mapping.txt  fit.yaml
examples/v1298tau-m3/: V1298Taub_230730_muscat3_r_c3567_r20_mapping.txt  V1298Taub_230730_muscat3_z_c3567_r20_mapping.txt  fit.yaml
installation/: index.html
notebooks/: plot_basis_vectors.ipynb  test.ipynb
scripts/: convert_csv.py  fit.py  get_corrected.py  get_ic.py  model-select.py
search/: search_index.json
timer/: __init__.py  fit.py  io.py  model.py  optim.py  plot.py  util.py
usage/: index.html
